add patch for task done status, update swagger docs
